--- a/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
@@ -174,11 +174,18 @@ p-dropdown.form-control {
 // END inline edit text input styles for inplace-editor.component
 
 //date and time input
-.ui-calendar .ui-calendar-button {
-    height: 2.15rem;
-}
+.ui-calendar {
+    display: block;
+    .ui-calendar-button {
+        height: 2.15rem;
+    }
+} 
 .ui-timepicker.ui-widget-header{
     text-align: center;
+}
+
+.form-group.questionGroup .ui-calendar input {
+    width: 150px;
 }
 
 // custom radio
