--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
@@ -41,13 +41,27 @@
 				[field]="col?.code" 
 				[header]="col?.label"
 				[hidden]="col?.uiStyles?.attributes?.hidden"
-				[sortable]="!col?.uiStyles?.isLink"
+				[sortable]="col?.type?.name !== 'date' ? !col?.uiStyles?.isLink : 'custom'"
+				(sortFunction)="(col?.type?.name === 'date' || col?.type?.name === 'Date' || col?.type?.name === 'LocalDateTime'
+				|| col?.type?.name === 'ZonedDateTime') ? mysort($event): null"
 				[filter]="col?.uiStyles?.attributes?.filter"
 				[filterMatchMode]="col?.uiStyles?.attributes?.filterMode"> 
 							
 				<ng-template pTemplate="header"> 
+
+				<ng-template [ngIf]="col?.type?.name === 'date' || col?.type?.name === 'Date' || col?.type?.name === 'LocalDateTime'
+					|| col?.type?.name === 'ZonedDateTime'">
 					<span title="{{col?.label}}"  *ngIf="!col?.uiStyles?.isLink">{{col.label}}</span> 
 					<a href="javascript:void(0)" (click)="toggleFilter($event)" class='gridFilterIcon' *ngIf="!col?.uiStyles?.isLink"></a> 
+				</ng-template>
+
+				<ng-template [ngIf]="col?.type?.name !== 'date' && col?.type?.name !== 'Date' && col?.type?.name !== 'LocalDateTime'
+				&& col?.type?.name !== 'ZonedDateTime'">
+					
+				<span title="{{col?.label}}"  *ngIf="!col?.uiStyles?.isLink">{{col.label}}</span> 
+				<a href="javascript:void(0)" (click)="toggleFilter($event)" class='gridFilterIcon' *ngIf="!col?.uiStyles?.isLink"></a> 
+				</ng-template>
+
 				</ng-template> 
 				
 				<ng-template *ngIf="col?.uiStyles?.attributes?.alias == 'CheckBox'" pTemplate="body" let-cell="rowData"> 
