--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
@@ -37,7 +37,7 @@
 
 		<ng-template ngFor let-col [ngForOf]="params">
 
-			<p-column *ngIf="col?.uiStyles?.attributes?.alias != 'Link' && col?.uiStyles?.attributes?.alias != 'LinkMenu'"
+			<p-column *ngIf="col?.uiStyles?.attributes?.alias != 'Link' && col?.uiStyles?.attributes?.alias != 'LinkMenu' && col?.type?.nested == false"
 				[field]="col?.code" 
 				[header]="col?.label"
 				[hidden]="col?.uiStyles?.attributes?.hidden"
@@ -55,8 +55,10 @@
 				</ng-template> 
 				
 				<ng-template let-col let-row="rowData" pTemplate="body">
-					<span title="{{row[col.field]}}">{{row[col.field]}}</span> 
-				</ng-template> 
+					<ng-template ngFor let-param [ngForOf]="row.params">
+						<span *ngIf="col.field == param.config.code">{{param.leafState}}</span> 
+					</ng-template>
+				</ng-template>
 				
 			</p-column>
 
@@ -66,6 +68,10 @@
 				</ng-template>
 			</p-column>
 		</ng-template>
+
+		<ng-template let-row pTemplate="rowexpansion">
+			<nm-section [element]="row.nestedElement"></nm-section>	
+		</ng-template> 
 				
 		<!-- <ng-template ngFor let-col [ngForOf]="params">
 			<ng-template *ngIf="col?.config?.type?.nested" let-subTbl pTemplate="rowexpansion">
