--- a/nimbus-ui/nimbusui/src/app/components/platform/header/header-global.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/header/header-global.component.html
@@ -1,7 +1,5 @@
 <div class="header" *ngIf="topMenuItems || branding">
-
-    <nm-link [element]="branding.logo" *ngIf="branding.logo"></nm-link>
-
+        <nm-link [element]="branding.logo" *ngIf="branding.logo"></nm-link>
     <div class="d-inline-block p-0 pull-right clearfix">
         <div class="headerMenu pull-right clearfix">
             <div class="topLinksMenu">
@@ -40,8 +38,8 @@
         
     </div>
 
-    <div class="col-lg-6 col-md-3 col-sm-3 hidden-sm-down p-0 ml-3 mt-1 ">
-        <div class="productName hidden-xs-downd-inline-block">
+    <div class="col-lg-6 col-md-3 col-sm-3 hidden-xs-down p-0 ml-3 mt-1 ">
+        <div class="productName hidden-xs-down d-inline-block">
               <nm-paragraph [element]="branding.title" *ngIf="branding.title"></nm-paragraph>  
         </div>
             
