--- a/nimbus-ui/nimbusui/src/app/components/platform/tile.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/tile.component.html
@@ -1,29 +1,18 @@
 <div class="card-holder" id="{{code}}" [ngClass]="styleWd" *ngIf="visible==true">
-	<div class="card card-block {{styleHt}}">
-		<div class='windowControls'>
-			 <button type="button" class="btn btn-icon windowControl">
-                <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="resources/icons/minimize.svg#Layer_1"></use></svg>
-            </button>
-            <button type="button" class="btn btn-icon windowControl">
-                <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="resources/icons/maximize.svg#Layer_1"></use></svg>
-            </button>
-			<button  type="button" class="btn btn-icon windowControl">
-                <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="resources/icons/close.svg#Layer_1"></use></svg>
-            </button>
-		</div>
 		<!--check for title attribute in the view config to render the header-->
 		<ng-template [ngIf]="element?.config?.labelConfigs?.length > 0">
-			<div class="card-header">
-				<h2 class="card-title">
-					{{label}}
-				</h2>
-				<ng-template ngFor let-element [ngForOf]="nestedParams">
-					<ng-template [ngIf]="element.alias == 'Header'">
-						<nm-header [element]="element"></nm-header>
-					</ng-template>
-				</ng-template>		
-			</div>
-		</ng-template>
+				<div class="card-header">
+					<h2 class="card-title {{imgSrc}}" >
+						{{label}} 
+					</h2>
+					<ng-template ngFor let-element [ngForOf]="nestedParams">
+						<ng-template [ngIf]="element.alias == 'Header'">
+							<nm-header [element]="element"></nm-header>
+						</ng-template>
+					</ng-template>		
+				</div>
+			</ng-template>
+	<div class="card card-block {{styleHt}}">
 		<div class="viewport" >
 			<ng-template ngFor let-element [ngForOf]="nestedParams">
 				<ng-template [ngIf]="element.alias == 'Tile'">
