--- a/nimbus-ui/nimbusui/src/assets/scss/_a.action-dropdown.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.action-dropdown.scss
@@ -8,18 +8,18 @@
             width: 1.3rem;
             height: 1.3rem;
             padding: 0;
-            border: 1px solid #ccc;
-            background: #fff;
+            //border: 1px solid #ccc;
+            background: $iconColor;
             line-height: 1;
             &::after {
-                color: #888;
+                color: #fff;
                 font-family: "fontAwesome";
                 content: "\f0d7";
                 font-size: 1.2rem;
                 line-height: 1;
             }
             &:hover{
-                background-color: #cecece;
+                background-color: darken($iconColor,10%);
             }
         }
         .dropdownContent {
