--- a/nimbus-ui/nimbusui/src/assets/scss/_a.header.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.header.scss
@@ -1,74 +1,43 @@
-.browserScroll{
-	.header{
-		position: static;
-	}
-	.globalNav{
-		position: static;
-	}
-	.wrapper{
-		position: static;
-		min-height: 700px;
-	}
-	.section-nav{
-		position: relative;
-		display:inline-block !important;
-		top: 10px;
-		left: 10px;
-		vertical-align: top;
-		.collapse.show {
-			display: block;
-		}
-	}
-	.main-content{
-		position: static;
-	
-		.breadcrumb-bar{
-			position: static;
-		}
-		.info-bar{
-			position: static;
-		}
-	}
-	.info-card {
-		&.card-holder:first-of-type {
-			width: 100%;
-			left: 0;
-		}
-
-		.card-block .card-header{
-			position: static;
-		}
+.section-nav{
+	position: relative;
+	display: inline-block !important;
+	margin-top: 0;
+	margin-left: 5px;
+	vertical-align: top;
+	padding: 0;
+	.collapse.show {
+		display: block;
 	}
 }
 
+.logoColor { fill: blue;}
+
 
 .header {
-    height: $headerHeight;
-    left:0;
-    right:0;
-    top:0;
-    z-index: 1000;
-	background-color: $header-bkg;
-	padding-top: .9rem;
-	position: fixed;
-	color:#fff;
-	label{
-		font-size: .9rem;
+    height: 70px;
+	color: $header-bkg;
+    border-bottom: 1px solid #578de1;
+	&::before{
+		display: block;
+		height: 1rem;
+		content: "";
+		background-color: $header-bkg;
 	}
 	
-	.productName p {
+	.productName, .productName p {
 			font-size: 1.1rem;
 			font-weight: 400;
 			margin: 0;
 			max-width: 200px;
-    		line-height: 1.5rem;
+    		line-height: 1.2rem;
 		}
 
 	.userIcon {
-    		font-size: 3rem;
-    		display: inline-block;
-			vertical-align: top;
-			margin: 0 1rem;
+		font-size: 2rem;
+		display: inline-block;
+		vertical-align: top;
+		margin: .3rem .3rem 0 0;
+		color: #96acbb;
 	}
 
 	.userInfo {
@@ -86,19 +55,25 @@
 
         .logo {
 			display:inline-block;
-			width: 150px;
-			margin-left: 10px;
-			margin-top: 0px;
-			vertical-align: top;
+			width: 135px;
+			height: 50px;
+			svg{
+				width: 135px;
+				height: 50px;
+				vertical-align: top;
+				fill: #3A7EC4;
+				stroke: $header-bkg;
+			}
+			
 		}
 		.logoName{
 			display:inline-block;
 			font-size: 0.8rem;
-			padding-top: .5rem;
+			padding-top: .5rem;			
+			
 		}
 
         .headerMenu {
-			color: #fff;
 			.btn-group{
 				height: $header-btn-height ;
 				padding-top:10px;
@@ -107,7 +82,6 @@
 			.topLinksMenu{
 				padding-right:20px;
 				a {
-					color: white;
 					float: right;
 					margin-right: 1rem;
 				&:not(.logoutLink)::after {
@@ -124,7 +98,6 @@
 			}
 			.form-control{
 				background-color: #217ECA;
-    			color: #fff;
 				border-color: #8FBEE4;
 			}
 			
@@ -132,9 +105,9 @@
 				height: $header-userIcon-height;
 				width: $header-userIcon-height;
 				fill: #3A7EC4;
-				stroke: #fff;
+				stroke: $header-bkg;
 				&:hover{
-					fill: $sidebar;
+					fill: $header-bkg;
 				}
 			}
 			
@@ -149,18 +122,6 @@
 }
 
 
-.stylish-input-group .input-group-addon{
-    background: white !important;
-}
-.stylish-input-group .form-control{
-	border-right:0;
-	box-shadow:0 0 0;
-	border-color:#ccc;
-}
-.stylish-input-group button{
-    border:0;
-    background:transparent;
-}
 
 #custom-search-input{
     padding: 3px;
@@ -201,9 +162,9 @@
 	position: relative;
 
 	.circle {
-		background-color:$header-bkg;
+		background-color:white;
 		position: absolute;
-		border:2px solid white;    
+		border:2px solid $header-bkg;    
 		height:20px;
 		border-radius:50%;
 		-moz-border-radius:50%;
