--- a/nimbus-ui/nimbusui/src/app/components/platform/section.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/section.component.html
@@ -37,9 +37,6 @@
                 <nm-menu [element]="element"></nm-menu>
             </ng-template>
             <!-- Grid Param -->
-            <ng-template [ngIf]="element.alias == 'GridContainer'">
-                <nm-grid-container [element]="element"></nm-grid-container>
-            </ng-template>
             <ng-template [ngIf]="element.alias == 'Grid'">
                 <infinite-scroll-grid
                     [element]="element" 
@@ -47,7 +44,7 @@
                 </infinite-scroll-grid>
             </ng-template>
             <!--Other buttons. Refactor item : to be triggred based on the buttongroup annotation-->
-            <ng-template [ngIf]="element.alias == 'Button' && element?.visible.currState == true">
+            <ng-template [ngIf]="element.alias == 'Button' && element?.visible == true">
                 <div class="text-sm-right">
                     <nm-button [element]="element"> </nm-button>
                 </div>
