--- a/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
@@ -181,7 +181,8 @@ h1.page-title {
 }
 
 .textWrapBreakWord {
-    word-break: break-word;;
+    word-break: break-word;
+    font-weight: bold;
 }
 
 nm-card-details {
