--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
@@ -43,9 +43,7 @@
 				[sortable]="!col?.uiStyles?.isLink ? 'custom' : false"
 				(sortFunction)="sortBy($event, col?.type?.name, col?.uiStyles?.attributes?.sortAs)"
 				[filter]="col?.uiStyles?.attributes?.filter"
-				[filterMatchMode]="col?.uiStyles?.attributes?.filterMode"
-			
-				> 
+				[filterMatchMode]="col?.uiStyles?.attributes?.filterMode" > 
 							
 				<ng-template pTemplate="header"> 
 					<span title="{{col?.label}}"  *ngIf="!col?.uiStyles?.isLink">{{col.label}}</span> 
@@ -54,16 +52,18 @@
 				
 				<ng-template *ngIf="col?.uiStyles?.attributes?.alias == 'CheckBox'" pTemplate="body" let-cell="rowData"> 
 					<label> <input type="checkbox" (click)="postOnChange(col, cell)"> </label> 
-				</ng-template> 
-				
+				</ng-template>
+
 				<ng-template let-datacol let-row="rowData" pTemplate="body">
-					<ng-template [ngIf]="isDate(col?.type?.name)">
-						<span title="{{row[datacol.field]}}">{{row[datacol.field] | dateTimeFormat: col.uiStyles?.attributes?.datePattern}}</span>
+					<ng-template ngFor let-param [ngForOf]="row.params">
+						<ng-template [ngIf]="isDate(col?.type?.name)">
+							<span *ngIf="datacol.field == param.config.code">{{param.leafState | dateTimeFormat: col.uiStyles?.attributes?.datePattern}}</span> 
+						</ng-template>
+						<ng-template [ngIf]="!isDate(col?.type?.name)">
+							<span *ngIf="datacol.field == param.config.code">{{param.leafState}}</span> 
+						</ng-template>
 					</ng-template>
-					<ng-template [ngIf]="!isDate(col?.type?.name)">
-						<span title="{{row[datacol.field]}}">{{row[datacol.field]}}</span> 
-					</ng-template>
-				</ng-template> 
+				</ng-template>
 
 				<ng-template let-filtercol pTemplate="filter">
 					<ng-template [ngIf]="isDate(col?.type?.name)">
