--- a/nimbus-ui/nimbusui/src/styles.scss
+++ b/nimbus-ui/nimbusui/src/styles.scss
@@ -16,3 +16,4 @@
 @import "assets/scss/a.floating-toolbar";
 @import "assets/scss/a.action-dropdown";
 @import "assets/scss/a.fileUpload";
+@import "assets/scss/a.loader";
