--- a/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-field.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-field.component.html
@@ -24,7 +24,7 @@
         <div class="form-group" *ngIf="!element.config.uiStyles.attributes.inplaceEdit && element.type.name !== 'date' && 
         element.type.name !== 'Date' && element.type.name !== 'LocalDateTime' && element.type.name != 'ZonedDateTime'">
                 <label class="" *ngIf="element.config.uiStyles.attributes.showName==true">{{label}}</label>
-                <div class="{{iconClass}}">{{value}}&nbsp;</div>    
+                <div class="{{iconClass}} textWrapBreakWord">{{value}}&nbsp;</div>    
         </div>
     </ng-template>
 </div>
