--- a/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-field.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-field.component.html
@@ -16,15 +16,13 @@
         <ng-template [ngIf]="element.config.uiStyles.attributes.inplaceEdit">
             <inplace-editor [element]="element"></inplace-editor>
         </ng-template>
-        <ng-template [ngIf]="element.type.name == 'date' || element.type.name == 'Date' || element.type.name == 'LocalDateTime'
-                || element.type.name == 'ZonedDateTime'">
+        <ng-template [ngIf]="isDate(element.type.name)">
             <label class="" *ngIf="element.config.uiStyles.attributes.showName==true">{{label}}</label>
             <div class="{{iconClass}}">{{value | dateTimeFormat: element.config?.uiStyles?.attributes?.datePattern }}&nbsp;</div>
          </ng-template>
-        <div class="form-group" *ngIf="!element.config.uiStyles.attributes.inplaceEdit && element.type.name !== 'date' && 
-        element.type.name !== 'Date' && element.type.name !== 'LocalDateTime' && element.type.name != 'ZonedDateTime'">
-                <label class="" *ngIf="element.config.uiStyles.attributes.showName==true">{{label}}</label>
-                <div class="{{iconClass}} textWrapBreakWord">{{value}}&nbsp;</div>    
+        <div class="form-group" *ngIf="!element.config.uiStyles.attributes.inplaceEdit && !isDate(element.type.name)">
+            <label class="" *ngIf="element.config.uiStyles.attributes.showName==true">{{label}}</label>
+            <div class="{{iconClass}} textWrapBreakWord">{{value}}&nbsp;</div>    
         </div>
     </ng-template>
 </div>
