--- a/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
@@ -68,15 +68,39 @@ ng-component{
         position: relative;
         text-align: left;
         border: none;
-        padding: .2rem 40px .2rem .4rem ;
+        padding: .2rem 2px .2rem .4rem ;
         line-height: 1rem;
         .ui-column-title {
             display: block;
             text-align: center;
             overflow: hidden;
             text-overflow: ellipsis;
+            padding-right: 40px; 
             
         }
+
+        .filterHolder{
+            position: relative;
+            margin-top: 3px;
+            input{
+                max-width: 100%;
+                min-width: 98%;
+            }
+            button{
+                position: absolute;
+                right: 3%;
+                top: 2.2px;
+                font-size: 0.8rem;
+                border: none;
+                height: 1rem;
+                color: #b9b6b6;
+                &:hover, &:focus{
+                    color: #4c4c4c;
+                }
+            }
+        }
+
+      
         .gridFilterIcon {
             position:absolute;
             right: 0;
